--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <h2>Home</h2>
     <p>Welcome to the home page.</p>
-    <footer>kkkkkkkkk
+    <footer>mmmmmm
         <p>Footer</p>
     </footer>
 </body>
