--- a/accueil.html
+++ b/accueil.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-<meta charset="utf-8">
-<title>Acceuil - Festival</title>
+    <meta charset="utf-8">
+    <title>Acceuil - Festival</title>
 </head>
+
 <body>
     <header>
         <!--Rentrer navigation (Taha)-->
@@ -12,12 +14,14 @@
     <main>
         <h2>(nom) - Edition 2024</h2>
         <p>
-            Nous avons très hâte de vous retrouver du (date + endroit), ainsi que dans nos cinémas partenaires partout en Wallonie et en Flandre !
+            Nous avons très hâte de vous retrouver du (date + endroit), ainsi que dans nos cinémas partenaires partout
+            en Wallonie et en Flandre !
             À découvrir cette année pour notre xème édition, (certains films du programme, donner envie).
         </p>
         <h2>Le Festival (nom), qu'est ce que c'est?</h2>
         <p>
-            Le festival (nom), est le plus grand festival de Belgique. Cela fait déjà x ans que le (nom) se déroule dans votre capitale.
+            Le festival (nom), est le plus grand festival de Belgique. Cela fait déjà x ans que le (nom) se déroule dans
+            votre capitale.
             (Blabla trouver description de festival pcq pas d'inspi)
         </p>
         <!--Rentrer dans le main : photo, lien vidéo youtube zahma donner envie-->
@@ -26,5 +30,6 @@
         <!--Rentrer footer commun à toutes les pages-->
     </footer>
 </body>
+
 </html>
 <!--Bien taffer le css pour rendre ça bien-->
