--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+<html lang="fr">
+
 <head>
+    <meta charset="utf-8">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Header</h1>
@@ -21,4 +25,5 @@
         <p>Footer</p>
     </footer>
 </body>
+
 </html>
