--- a/accueil.html
+++ b/accueil.html
@@ -8,9 +8,16 @@
 
 <body>
     <header>
-        <!--Rentrer navigation (Taha)-->
-        <h1></h1>
-    </header>
+        <img src="placement.png">
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Home</a></li>
+                <li><a href="pageTickets.html">Tickets</a></li>
+                <li><a href="programation.html">Programation</a></li>
+                <li><a href="contact.html"> Contact</a></li>
+            </ul>
+        </nav>
+        </header>
     <main>
         <h2>(nom) - Edition 2024</h2>
         <p>
