--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,14 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Home</a></li>
+                <li><a href="pageTickets.html">Tickets</a></li>
+                <li><a href="programation.html">Programation</a></li>
+                <li><a href="contact.html"> Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <h2>Contact</h2>
     <p>
