--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta charset="utf-8">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>Header</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="accueil.html">Home</a></li>
+                <li><a href="pageTickets.html">Tickets</a></li>
+                <li><a href="programation.html">Programation</a></li>
+                <li><a href="contact.html"> Contact</a></li>
             </ul>
         </nav>
     </header>
