--- a/pageTickets.html
+++ b/pageTickets.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html lang = "fr">
+<html lang="fr">
+
 <head>
-    <meta charset = "utf-8">
+    <meta charset="utf-8">
     <title>Tarifs</title>
     <link rel="stylesheet" href="style.css">
+
 <body>
-<header>
-    <nav>
-        xxxxxxxxx
-    </nav>
-    <h1>Tarifs Festival</h1>
-    <ul>
-        <li>Pass Standard - 30$</li>
-        <li>Pass VIP - 50$</li>
-        <li>Pass Etudiant - 20$</li>
-        <li>Pass Senior - 25$</li>
-        <li>Pass Kids - Gratuit</li>
-        <li>Pass Global - 120$</li>
-    </ul>
-</header>
-</body>    
-</head>    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Home</a></li>
+                <li><a href="pageTickets.html">Tickets</a></li>
+                <li><a href="programation.html">Programation</a></li>
+                <li><a href="contact.html"> Contact</a></li>
+            </ul>
+        </nav>
+        <h1>Tarifs Festival</h1>
+        <ul>
+            <li>Pass Standard - 30$</li>
+            <li>Pass VIP - 50$</li>
+            <li>Pass Etudiant - 20$</li>
+            <li>Pass Senior - 25$</li>
+            <li>Pass Kids - Gratuit</li>
+            <li>Pass Global - 120$</li>
+        </ul>
+    </header>
+</body>
+</head>
+
 </html>
