ajout de calendrier dans la nav

--- a/accueil.html
+++ b/accueil.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Acceuil - Festival</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -15,11 +16,12 @@
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="contact.html"> Contact</a></li>
+                <li><a href="calendrier.html">Calendrier</a></li>
             </ul>
         </nav>
-        </header>
+    </header>
     <main>
-        <h2>(nom) - Edition 2024</h2>
+        <h1>(nom) - Edition 2024</h1>
         <p>
             Nous avons très hâte de vous retrouver du (date + endroit), ainsi que dans nos cinémas partenaires partout
             en Wallonie et en Flandre !
