--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -17,6 +16,7 @@
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="contact.html"> Contact</a></li>
+                <li><a href="calendrier.html">Calendrier</a></li>
             </ul>
         </nav>
     </header>
