--- a/pageTickets.html
+++ b/pageTickets.html
@@ -14,6 +14,7 @@
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="contact.html"> Contact</a></li>
+                <li><a href="calendrier.html">Calendrier</a></li>
             </ul>
         </nav>
         <h1>Tarifs Festival</h1>
