--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,12 @@
                 <li><a href="accueil.html">Home</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="programation.html">Programation</a></li>
-                <li><a href="contact.html"> Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="calendrier.html">Calendrier</a></li>
             </ul>
         </nav>
     </header>
-    <h2>Contact</h2>
+    <h1>Contact</h1>
     <p>
         <a href="mailto:EMAIL"></a>
     </p>
