ajout de archive html + nav +base des pages calendrier, archive et programmation

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="calendrier.html">Calendrier</a></li>
+                <li><a href="archive.html">Archive</a></li>
             </ul>
         </nav>
     </header>
