--- a/pageTickets.html
+++ b/pageTickets.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tarifs</title>
+    <title>Tarifs - Festival</title>
     <link rel="stylesheet" href="style.css">
 
 <body>
@@ -15,6 +15,7 @@
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="contact.html"> Contact</a></li>
                 <li><a href="calendrier.html">Calendrier</a></li>
+                <li><a href="archive.html">Archive</a></li>
             </ul>
         </nav>
         <h1>Tarifs Festival</h1>
