maj nav pour le template

--- a/accueil.html
+++ b/accueil.html
@@ -3,23 +3,23 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Acceuil - Festival</title>
     <link type="image/png" sizes="16x16" rel="icon" href="./img/icons8-video-camera-16.png">
-    <link rel="stylesheet" type="text/css" href="./stylesheet/css/main.css">
+    <link rel="stylesheet" href="./stylesheet/css/main.css">
     <noscript>
-        <link rel="stylesheet" href="./stylesheet/css/noscript.css" />
+        <link rel="stylesheet" href="./stylesheet/css/noscript.css">
     </noscript>
 </head>
 
 <body class="is-preload">
     <div id="wrapper">
         <header id="header">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/camcorder-pro.png" alt="camcorder-pro" />
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/camcorder-pro.png" alt="camcorder-pro">
         </header>
         <nav id="nav">
             <ul class="links">
-                <li><a href="accueil.html">Home</a></li>
+                <li class="active"><a href="accueil.html">Accueil</a></li>
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="calendrier.html">Calendrier</a></li>
                 <li><a href="archive.html">Archive</a></li>
