--- a/calendrier.html
+++ b/calendrier.html
@@ -3,24 +3,32 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Calendrier - Festival</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet/style.css" />
+    <link rel="stylesheet" href="./stylesheet/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="./stylesheet/css/noscript.css">
+    </noscript>
 </head>
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="accueil.html">Home</a></li>
+<body class="is-preload">
+    <div id="wrapper">
+        <header id="header">
+            <a href="accueil.html" class="logo">Festival</a>
+        </header>
+        <nav id="nav">
+            <ul class="links">
+                <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="programation.html">Programation</a></li>
-                <li><a href="calendrier.html">Calendrier</a></li>
+                <li class="active"><a href="calendrier.html">Calendrier</a></li>
                 <li><a href="archive.html">Archive</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
-    <h1>Calendrier</h1>
+
+        <h1>Calendrier</h1>
+    </div>
 </body>
 
 </html>
