--- a/pageTickets.html
+++ b/pageTickets.html
@@ -3,21 +3,29 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tarifs - Festival</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./stylesheet/css/main.css">
+    <noscript>
+        <link rel="stylesheet" href="./stylesheet/css/noscript.css">
+    </noscript>
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="accueil.html">Home</a></li>
+<body class="is-preload">
+    <div id="wrapper">
+        <header id="header">
+            <a href="accueil.html" class="logo">Festival</a>
+        </header>
+        <nav id="nav">
+            <ul class="links">
+                <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="programation.html">Programation</a></li>
                 <li><a href="calendrier.html">Calendrier</a></li>
                 <li><a href="archive.html">Archive</a></li>
-                <li><a href="pageTickets.html">Tickets</a></li>
-                <li><a href="contact.html"> Contact</a></li>
+                <li class="active"><a href="pageTickets.html">Tickets</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+
         <h1>Tarifs Festival</h1>
         <ul>
             <li>Pass Standard - 30$</li>
@@ -27,7 +35,7 @@
             <li>Pass Kids - Gratuit</li>
             <li>Pass Global - 120$</li>
         </ul>
-    </header>
+    </div>
 </body>
 </head>
 
