contact adding g maps +html validator

--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,11 @@
         </nav>
         <div id="main">
             <section>
+                <h3>Commentaire</h3>
                 <form method="post" action="mailto:taha.achiaou@homail.com">
                     <div class="fields">
                         <div class="field">
-                            <label for="name">Name</label>
+                            <label for="name">Nom</label>
                             <input type="text" name="name" id="name">
                         </div>
                         <div class="field">
@@ -48,22 +49,26 @@
                     </ul>
                 </form>
             </section>
-            <section class="split contact">
+            <div class="split contact">
                 <section class="alt">
-                    <h3>Address</h3>
-                    <p>1080 Somewhere Road #87257<br>
-                        Nashville, TN 00000-0000</p>
+                    <h3>Adresse</h3>
+                    <p>Avenue de l’Astronomie, 19<br>
+                        1210 Bruxelles</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2518.901494635084!2d4.366913411774892!3d50.85150835828837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c4ce9cfb50cf%3A0xecd042e116ed41ac!2sEPFC!5e0!3m2!1sen!2sbe!4v1709839057850!5m2!1sen!2sbe"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </section>
                 <section>
-                    <h3>Phone</h3>
-                    <p><a href="#">(000) 000-0000</a></p>
+                    <h3>Téléphone</h3>
+                    <p><a href="#">02 777 10 10</a></p>
                 </section>
                 <section>
                     <h3>Email</h3>
                     <p><a href="mailto:taha.achiaou@hotmail.com">taha.achiaou@hotmail.com</a></p>
                 </section>
                 <section>
-                    <h3>Social</h3>
+                    <h3>Sociaux</h3>
                     <div class="main">
                         <div class="up">
                             <button class="card1">
@@ -72,8 +77,8 @@
                                     class="instagram">
                                     <g fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
                                         stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray=""
-                                        stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none"
-                                        text-anchor="none" style="mix-blend-mode: normal">
+                                        stroke-dashoffset="0" font-family="none" font-size="none"
+                                        style="mix-blend-mode: normal">
                                         <g transform="scale(8,8)">
                                             <path
                                                 d="M11.46875,5c-3.55078,0 -6.46875,2.91406 -6.46875,6.46875v9.0625c0,3.55078 2.91406,6.46875 6.46875,6.46875h9.0625c3.55078,0 6.46875,-2.91406 6.46875,-6.46875v-9.0625c0,-3.55078 -2.91406,-6.46875 -6.46875,-6.46875zM11.46875,7h9.0625c2.47266,0 4.46875,1.99609 4.46875,4.46875v9.0625c0,2.47266 -1.99609,4.46875 -4.46875,4.46875h-9.0625c-2.47266,0 -4.46875,-1.99609 -4.46875,-4.46875v-9.0625c0,-2.47266 1.99609,-4.46875 4.46875,-4.46875zM21.90625,9.1875c-0.50391,0 -0.90625,0.40234 -0.90625,0.90625c0,0.50391 0.40234,0.90625 0.90625,0.90625c0.50391,0 0.90625,-0.40234 0.90625,-0.90625c0,-0.50391 -0.40234,-0.90625 -0.90625,-0.90625zM16,10c-3.30078,0 -6,2.69922 -6,6c0,3.30078 2.69922,6 6,6c3.30078,0 6,-2.69922 6,-6c0,-3.30078 -2.69922,-6 -6,-6zM16,12c2.22266,0 4,1.77734 4,4c0,2.22266 -1.77734,4 -4,4c-2.22266,0 -4,-1.77734 -4,-4c0,-2.22266 1.77734,-4 4,-4z">
@@ -111,8 +116,7 @@
                         </div>
                     </div>
                 </section>
-            </section>
-            </footer>
+            </div>
 
             <!-- Scripts -->
             <script src="js/jquery.min.js"></script>
@@ -124,7 +128,7 @@
             <script src="js/main.js"></script>
 
         </div>
-
+    </div>
 </body>
 
 </html>
