programmation est avec 2 m

--- a/archive.html
+++ b/archive.html
@@ -19,7 +19,7 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="programation.html">Programation</a></li>
+                <li><a href="programmation.html">Programmation</a></li>
                 <li><a href="calendrier.html">Calendrier</a></li>
                 <li class="active"><a href="archive.html">Archive</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
