--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="programation.html">Programation</a></li>
+                <li><a href="programation.html">Programmation</a></li>
                 <li><a href="calendrier.html">Calendrier</a></li>
                 <li><a href="archive.html">Archive</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <ul class="actions">
-                        <li><input type="submit" value="Send Message"></li>
+                        <li><input type="submit" value="Envoyer message"></li>
                     </ul>
                 </form>
             </section>
