--- a/pageTickets.html
+++ b/pageTickets.html
@@ -26,14 +26,23 @@
             </ul>
         </nav>
 
-        <h1>Tarifs Festival</h1>
+        <h1>Achats des Billets</h1>
+        <p>
+            En ligne : Acheter directement les tickets ci dessous.
+            Sur Place : Acheter les tickets a la billeterie sur place.
+            ⚠ Pour les billets sur place, Possibilité que la seance soit pleine.
+    
+        </p>
         <ul>
-            <li>Pass Standard - 30$</li>
-            <li>Pass VIP - 50$</li>
-            <li>Pass Etudiant - 20$</li>
-            <li>Pass Senior - 25$</li>
-            <li>Pass Kids - Gratuit</li>
-            <li>Pass Global - 120$</li>
+            <li>Tarifs Standard - 10$</li>
+            <li>Tarifs Reduit - 5$</li>
+            * étudiant-es -26 ans, seniors +64 ans, demandeur-euse d'emploi
+            <li>Tarifs Kids - 6$</li>
+            * -12 ans
+            <li>Tarifs de groupe - 5$/*personne</li>
+            * groupes d'au moins 6 personnes*
+            <li>Super Pass - ?$</li>
+            * acces a tout le festival
         </ul>
     </div>
 </body>
