Change Nom Agenda

--- a/agenda.html
+++ b/agenda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calendrier - Festival</title>
+    <title>Agenda - Festival</title>
     <link rel="stylesheet" href="./stylesheet/css/main.css">
     <noscript>
         <link rel="stylesheet" href="./stylesheet/css/noscript.css">
@@ -20,14 +20,14 @@
             <ul class="links">
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="programmation.html">Programmation</a></li>
-                <li class="active"><a href="calendrier.html">Calendrier</a></li>
+                <li class="active"><a href="agenda.html">Agenda</a></li>
                 <li><a href="archive.html">Archive</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
-        <h1>Calendrier</h1>
+        <h1>Agenda</h1>
     </div>
 </body>
 
