--- a/pageTickets.html
+++ b/pageTickets.html
@@ -26,24 +26,25 @@
             </ul>
         </nav>
 
-        <h1>Achats des Billets</h1>
-        <p>
-            En ligne : Acheter directement les tickets ci dessous.
-            Sur Place : Acheter les tickets a la billeterie sur place.
-            ⚠ Pour les billets sur place, Possibilité que la seance soit pleine.
-    
-        </p>
-        <ul>
-            <li>Tarifs Standard - 10$</li>
-            <li>Tarifs Reduit - 5$</li>
-            * étudiant-es -26 ans, seniors +64 ans, demandeur-euse d'emploi
-            <li>Tarifs Kids - 6$</li>
-            * -12 ans
-            <li>Tarifs de groupe - 5$/*personne</li>
-            * groupes d'au moins 6 personnes*
-            <li>Super Pass - ?$</li>
-            * acces a tout le festival
-        </ul>
+        <div id="main">
+            <h1>Achats des Billets</h1>
+            <section>
+                <p>En ligne : Acheter directement les tickets ci dessous.</p>
+                <p>Sur Place : Acheter les tickets a la billeterie sur place.</p>
+                <p> ⚠ Pour les billets sur place, Possibilité que la seance soit pleine.</p>
+            </section>
+            <ul>
+                <li>Tarifs Standard - 10$</li>
+                <li>Tarifs Reduit - 5$</li>
+                * étudiant-e -26 ans, seniors +64 ans, demandeur-euse d'emploi
+                <li>Tarifs Kids - 6$</li>
+                * -12 ans
+                <li>Tarifs de groupe - 5$/*personne</li>
+                * groupes d'au moins 6 personnes*
+                <li>Super Pass - ?$</li>
+                * acces a tout le festival
+            </ul>
+        </div>
     </div>
 </body>
 </head>
