--- a/pageTickets.html
+++ b/pageTickets.html
@@ -19,7 +19,7 @@
             <ul class="links">
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="programmation.html">Programmation</a></li>
-                <li><a href="calendrier.html">Calendrier</a></li>
+                <li><a href="agenda.html">Agenda</a></li>
                 <li><a href="archive.html">Archive</a></li>
                 <li class="active"><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="contact.html">Contact</a></li>
