--- a/archive.html
+++ b/archive.html
@@ -20,7 +20,7 @@
             <ul class="links">
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="programmation.html">Programmation</a></li>
-                <li><a href="calendrier.html">Calendrier</a></li>
+                <li><a href="agenda.html">Agenda</a></li>
                 <li class="active"><a href="archive.html">Archive</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -28,6 +28,12 @@
         </nav>
 
         <h1>Archive</h1>
+    </div>
+    <div id="copyright">
+        <ul>
+            <li>&copy; Untitled</li>
+            <li>Design from : <a href="https://github.com/taha2-4/festival-2024">THE BEST</a></li>
+        </ul>
     </div>
 </body>
 
