--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
         <nav id="nav">
             <ul class="links">
                 <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="programation.html">Programmation</a></li>
-                <li><a href="calendrier.html">Calendrier</a></li>
+                <li><a href="programmation.html">Programmation</a></li>
+                <li><a href="agenda.html">Agenda</a></li>
                 <li><a href="archive.html">Archive</a></li>
                 <li><a href="pageTickets.html">Tickets</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
@@ -128,6 +128,44 @@
             <script src="js/main.js"></script>
 
         </div>
+    </div>
+    <footer id="footer">
+        <section>
+            <div class="col-md-3">
+                <div class="useful-link">
+                    <h2>Useful Links</h2>
+                    <img src="./assets/images/about/home_line.png" alt="" class="img-fluid">
+                    <div class="use-links">
+                        <li><a href="accueil.html"><i class="fa-solid fa-angles-right"></i> Accueil</a></li>
+                        <li><a href="agenda.html"><i class="fa-solid fa-angles-right"></i> Agenda</a></li>
+                        <li><a href="pageTickets.html"><i class="fa-solid fa-angles-right"></i> Tickets</a></li>
+                        <li><a href="contact.html"><i class="fa-solid fa-angles-right"></i> Contact</a></li>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="split contact">
+            <section class="alt">
+                <h3>Address</h3>
+                <p>1234 Somewhere Road #87257<br>
+                    Nashville, TN 00000-0000</p>
+            </section>
+            <section>
+                <h3>Phone</h3>
+                <p><a href="#">(000) 000-0000</a></p>
+            </section>
+            <section>
+                <h3>Email</h3>
+                <p><a href="#">info@untitled.tld</a></p>
+            </section>
+        </section>
+    </footer>
+
+    <div id="copyright">
+        <ul>
+            <li>&copy; Untitled</li>
+            <li>Design from : <a href="https://github.com/taha2-4/festival-2024">THE BEST</a></li>
+        </ul>
     </div>
 </body>
 
