--- a/pageTickets.html
+++ b/pageTickets.html
@@ -46,6 +46,12 @@
             </ul>
         </div>
     </div>
+    <div id="copyright">
+        <ul>
+            <li>&copy; Untitled</li>
+            <li>Design from : <a href="https://github.com/taha2-4/festival-2024">THE BEST</a></li>
+        </ul>
+    </div>
 </body>
 </head>
 
