--- a/accueil.html
+++ b/accueil.html
@@ -43,6 +43,37 @@
             </section>
         </div>
     </div>
+    <footer id="footer">
+        <section>
+            <div class="col-md-3">
+                <div class="useful-link">
+                    <h2>Useful Links</h2>
+                    <img src="./assets/images/about/home_line.png" alt="" class="img-fluid">
+                    <div class="use-links">
+                        <li><a href="accueil.html"><i class="fa-solid fa-angles-right"></i> Accueil</a></li>
+                        <li><a href="agenda.html"><i class="fa-solid fa-angles-right"></i> Agenda</a></li>
+                        <li><a href="pageTickets.html"><i class="fa-solid fa-angles-right"></i> Tickets</a></li>
+                        <li><a href="contact.html"><i class="fa-solid fa-angles-right"></i> Contact</a></li>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="split contact">
+            <section class="alt">
+                <h3>Address</h3>
+                <p>1234 Somewhere Road #87257<br>
+                    Nashville, TN 00000-0000</p>
+            </section>
+            <section>
+                <h3>Phone</h3>
+                <p><a href="#">(000) 000-0000</a></p>
+            </section>
+            <section>
+                <h3>Email</h3>
+                <p><a href="#">info@untitled.tld</a></p>
+            </section>
+        </section>
+    </footer>
 
     <div id="copyright">
         <ul>
