--- a/contact.html
+++ b/contact.html
@@ -146,17 +146,17 @@
         </section>
         <section class="split contact">
             <section class="alt">
-                <h3>Address</h3>
-                <p>1234 Somewhere Road #87257<br>
-                    Nashville, TN 00000-0000</p>
+                <h3>Adresse</h3>
+                <p>Avenue de l’Astronomie, 19<br>
+                    1210 Bruxelles</p>
             </section>
             <section>
-                <h3>Phone</h3>
-                <p><a href="#">(000) 000-0000</a></p>
+                <h3>Telephone</h3>
+                <p><a href="#">02 777 10 10</a></p>
             </section>
             <section>
-                <h3>Email</h3>
-                <p><a href="#">info@untitled.tld</a></p>
+                <h3>E-mail</h3>
+                <p><a href="#">taha.achiaou@hotmail.com</a></p>
             </section>
         </section>
     </footer>
