--- a/pageTickets.html
+++ b/pageTickets.html
@@ -46,6 +46,37 @@
             </ul>
         </div>
     </div>
+    <footer id="footer">
+        <section>
+            <div class="col-md-3">
+                <div class="useful-link">
+                    <h2>Useful Links</h2>
+                    <img src="./assets/images/about/home_line.png" alt="" class="img-fluid">
+                    <div class="use-links">
+                        <li><a href="accueil.html"><i class="fa-solid fa-angles-right"></i> Accueil</a></li>
+                        <li><a href="agenda.html"><i class="fa-solid fa-angles-right"></i> Agenda</a></li>
+                        <li><a href="pageTickets.html"><i class="fa-solid fa-angles-right"></i> Tickets</a></li>
+                        <li><a href="contact.html"><i class="fa-solid fa-angles-right"></i> Contact</a></li>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="split contact">
+            <section class="alt">
+                <h3>Adresse</h3>
+                <p>Avenue de l’Astronomie, 19<br>
+                    1210 Bruxelles</p>
+            </section>
+            <section>
+                <h3>Telephone</h3>
+                <p><a href="#">02 777 10 10</a></p>
+            </section>
+            <section>
+                <h3>E-mail</h3>
+                <p><a href="#">taha.achiaou@hotmail.com</a></p>
+            </section>
+        </section>
+    </footer>
     <div id="copyright">
         <ul>
             <li>&copy; Untitled</li>
