Création page humour et sf

--- a/accueil.html
+++ b/accueil.html
@@ -40,6 +40,8 @@
 
                 <h2>Le Festival "Retro Movies", qu'est ce que c'est?</h2>
                 <p>Retro Movies est un festival qui a vu ses premiers jours en 2022 pour sa première édition. Il se déroule (endroit). Le thème de ce festival est unique. Les films ne sont pas forcément des films récents mais plutôt choisis par vous, le public. Effectivement chaque année 3 mois avant le festival, vous avez l'occasion de voter pour vos films préférés (1 par catégorie) que vous aimeriez voir au festival, qu'ils soient récents ou non. Vous pouvez bien sûr également visionner nos films séléctionnés partout en Belgique dans nos cinémas partenaires (Tarifs différents qu'au festival).</p>
+                <iframe width="720" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
             </section>
         </div>
     </div>
